# yandex_praktikum_bttrs

./: LICENSE  README.md  manage.py  pyproject.toml
blog/: admin.py  models.py  translation.py
blog/migrations/: 0001_initial.py
bttrs/: settings.py  urls.py  wsgi.py
